--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,14 +46,21 @@ g {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(var(--accent-color-rgb), 0.5);
+  background-color: rgba(var(--primary-color-rgb), 0.5);
   border-radius: 4px;
 }
 ::selection {
-  background-color: rgba(var(--accent-color-rgb), 1);
+  background-color: rgba(var(--primary-color-rgb), 1);
 }
 
 //consider for module css contact page
 .min-t {
   width: min(20rem, 100%);
+}
+.dashboard-background {
+  background: linear-gradient(
+    120deg,
+    rgba(var(--primary-color-rgb), 1),
+    rgba(var(--accent-color-rgb), 1)
+  );
 }
